# quanitity_automation_tool

./: .gitignore  120101-1715764616769.xlsx  README.md  amazonRUGattrs.json  amazon_HAND_SEWING_NEEDLE_attrs.json  app.py  ddd.py  docker-compose.yml  hp_categories copy.json  jhj.py  main.py  pyproject.toml  requirements.txt  test.html  test.php  text.py  tui.py
api/: N11_soap_request.py  _N11_api_draft.py  amazon_seller_api.py  base_api.py  dd.py  ff.py  hepsiburada_api.py  kkk.py  magento.py  n11_api.py  n11_api_draft.py  n11_rest_api.py  n11_soap_api.py  pazarama_api.py  pttavm_api.py  trendyol_api.py  wordpress_api.py
api/tools/: comission_calculator.py
app/: config.py  config2.py  ddd.py  main.py  requirements.txt  tui.py
app/api/: pazarama_api.py  trendyol_api.py  wordpress_api.py
app/api/tools/: comission_calculator.py
app/config/: __init__.py  constants.py  logging_init.py
services/amazon_service/: Dockerfile  database.py  main.py  models.py  schemas.py
services/amazon_service/api/: amazon_seller_api.py
services/hepsiburada_service/: Dockerfile  database.py  main.py  models.py  schemas.py
services/n11_service/: database.py  main.py  models.py  schemas.py
services/pazarama_service/: database.py  main.py  models.py  schemas.py
services/pttavm_service/: Dockerfile  database.py  main.py  models.py  schemas.py
services/trendyol_service/: database.py  main.py  models.py  schemas.py  scheme.py  tts.py
services/wordpress_service/: database.py  main.py  models.py  schemas.py
shared/: __init__.py  database.py
tests/: test_api.py  tst1.py
(+7 files in other folders)
